--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="image/discord_favicon.png" type="image/x-icon">
   <!--CSS-->
   <link rel="stylesheet" href="styles.css">
   <title>Discord Work Page</title>
@@ -1234,7 +1235,7 @@
               <img src="image/discord-footer.svg" alt="discord" class="img-footer">
             </div>
             <div class="button-sections-footer d-flex justify-content-end align-items-end">
-              <a href="" class="button-sections-a">registrarse</a>
+              <a href="" class="button-sections-a">Registrarse</a>
             </div>
           </div>
         </div>
